Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-2943

mesos fails to compile under mac when libssl and libevent are enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.23.0
    • 0.23.0
    • libprocess
    • Mesosphere Sprint 14
    • 2

    Description

      ../configure --enable-debug --enable-libevent --enable-ssl && make

      produces the following error:

      poll.cpp' || echo '../../../3rdparty/libprocess/'`src/libevent_poll.cpp
      libtool: compile: g++ -DPACKAGE_NAME=\"libprocess\" -DPACKAGE_TARNAME=\"libprocess\" -DPACKAGE_VERSION=\"0.0.1\" "-DPACKAGE_STRING=\"libprocess 0.0.1\"" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"libprocess\" -DVERSION=\"0.0.1\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DHAVE_APR_POOLS_H=1 -DHAVE_LIBAPR_1=1 -DHAVE_SVN_VERSION_H=1 -DHAVE_LIBSVN_SUBR_1=1 -DHAVE_SVN_DELTA_H=1 -DHAVE_LIBSVN_DELTA_1=1 -DHAVE_LIBCURL=1 -DHAVE_EVENT2_EVENT_H=1 -DHAVE_LIBEVENT=1 -DHAVE_EVENT2_THREAD_H=1 -DHAVE_LIBEVENT_PTHREADS=1 -DHAVE_OPENSSL_SSL_H=1 -DHAVE_LIBSSL=1 -DHAVE_LIBCRYPTO=1 -DHAVE_EVENT2_BUFFEREVENT_SSL_H=1 -DHAVE_LIBEVENT_OPENSSL=1 -DUSE_SSL_SOCKET=1 -DHAVE_PTHREAD_PRIO_INHERIT=1 -DHAVE_PTHREAD=1 -DHAVE_LIBZ=1 -DHAVE_LIBDL=1 -I. -I../../../3rdparty/libprocess -I../../../3rdparty/libprocess/include -I../../../3rdparty/libprocess/3rdparty/stout/include -I3rdparty/boost-1.53.0 -I3rdparty/libev-4.15 -I3rdparty/picojson-4f93734 -I3rdparty/glog-0.3.3/src -I3rdparty/ry-http-parser-1c3624a -I/usr/local/opt/openssl/include -I/usr/local/opt/libevent/include -I/usr/local/opt/subversion/include/subversion-1 -I/usr/include/apr-1 -I/usr/include/apr-1.0 -g1 -O0 -std=c+11 -stdlib=libc+ -DGTEST_USE_OWN_TR1_TUPLE=1 -MT libprocess_la-libevent_poll.lo -MD -MP -MF .deps/libprocess_la-libevent_poll.Tpo -c ../../../3rdparty/libprocess/src/libevent_poll.cpp -fno-common -DPIC -o libprocess_la-libevent_poll.o
      mv -f .deps/libprocess_la-socket.Tpo .deps/libprocess_la-socket.Plo
      mv -f .deps/libprocess_la-subprocess.Tpo .deps/libprocess_la-subprocess.Plo
      mv -f .deps/libprocess_la-libevent.Tpo .deps/libprocess_la-libevent.Plo
      mv -f .deps/libprocess_la-metrics.Tpo .deps/libprocess_la-metrics.Plo
      In file included from ../../../3rdparty/libprocess/src/libevent_ssl_socket.cpp:11:
      In file included from ../../../3rdparty/libprocess/include/process/queue.hpp:9:
      ../../../3rdparty/libprocess/include/process/future.hpp:849:7: error: no viable conversion from 'const process::Future<const process::Future<process::network::Socket> >' to 'const process::network::Socket'
      set(u);
      ^
      ../../../3rdparty/libprocess/src/libevent_ssl_socket.cpp:769:10: note: in instantiation of function template specialization 'process::Future<process::network::Socket>::Future<process::Future<const process::Future<process::network::Socket> > >' requested here
      return accept_queue.get()
      ^
      ../../../3rdparty/libprocess/include/process/socket.hpp:21:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'const process::Future<const process::Future<process::network::Socket> >' to
      'process::network::Socket &&' for 1st argument
      class Socket
      ^
      ../../../3rdparty/libprocess/include/process/socket.hpp:21:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'const process::Future<const process::Future<process::network::Socket> >' to
      'const process::network::Socket &' for 1st argument
      class Socket
      ^
      ../../../3rdparty/libprocess/include/process/future.hpp:411:21: note: passing argument to parameter '_t' here
      bool set(const T& _t);
      ^
      1 error generated.
      make[4]: *** [libprocess_la-libevent_ssl_socket.lo] Error 1
      make[4]: *** Waiting for unfinished jobs....
      mv -f .deps/libprocess_la-libevent_poll.Tpo .deps/libprocess_la-libevent_poll.Plo
      mv -f .deps/libprocess_la-openssl.Tpo .deps/libprocess_la-openssl.Plo
      mv -f .deps/libprocess_la-process.Tpo .deps/libprocess_la-process.Plo
      make[3]: *** [all-recursive] Error 1
      make[2]: *** [all-recursive] Error 1
      make[1]: *** [all] Error 2
      make: *** [all-recursive] Error 1

      Attachments

        Issue Links

          Activity

            People

              jvanremoortere Joris Van Remoortere
              hartem Artem Harutyunyan
              Benjamin Hindman Benjamin Hindman
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: