MESOS-2943: Add comment for explicit return type.

Review: https://reviews.apache.org/r/36267